[package]
name = "web_server"
version = "0.1.0"
authors = ["sunmh <asmh1989@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.2"
digest = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.0", features = ["serde"] }
log = "0.4"
log4rs = "0.13.0"
once_cell = "1.5.2"

rand = "0.8.2"

tokio = { version = "1.1.0", features = ["full"] }
structopt = "0.3"
whoami = "0.9"

sqlx = { git = "https://github.com/launchbadge/sqlx", rev = "af7f259", features = ["runtime-actix-rustls", "mysql"] }


actix-web = "4.0.0-beta.1"

actix-identity = { git = "https://github.com/andy128k/actix-extras", branch = "update-dependencies" }

[dev-dependencies]
actix-rt = "2.0.0-beta.2"
